{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "392d914e-d7c6-4e8c-b332-fe672a717422",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "5285160d-f298-4b8d-81cd-7df7478839c8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "d332d2c4-add6-401b-a765-a81a2628b065",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bdc92817-d40c-40b6-bff9-b8b0ffca4e61",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a640cff5-0dec-49e1-b11f-fa54b1af2262",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": []
        }
    ]
}